[package]
name = "kcounter"
version = "0.1.1"
authors = ["Antonio Camargo <antoniop.camargo@gmail.com>"]
edition = "2018"
readme = "README.md"
homepage = "https://github.com/apcamargo/kcounter"
keywords = ["kmer", "bioinformatics"]

[lib]
name = "kcounter"
crate-type = ["cdylib"]

[dependencies]
needletail = "0.4.1"
pyo3 = { version = "0.13.2", features = ["extension-module"] }